tests/class_statics/class_static_prototype.js
// @flow

class A {
  static prototype: Object; // error
}
